--- a/APP/index.html
+++ b/APP/index.html
@@ -4,27 +4,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Runtime Radio Live Machine</title>
+    <title>Runtime Radio Live Machine Pro</title>
     <meta name="description" content="Professional web-based audio console for radio, podcast, and live event production" />
     <meta name="theme-color" content="#06b6d4" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="RRLM" />
+    <meta name="apple-mobile-web-app-title" content="RRLM Pro" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/icon-192.png" />
-    <!-- CSP Consideration: If deploying with CSP, consider hosting these locally or adding integrity hashes -->
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons@7.2.3/css/flag-icons.min.css">
-  <script type="importmap">
-  {
-    "imports": {
-      "react/": "https://esm.sh/react@^19.1.0/",
-      "react": "https://esm.sh/react@^19.1.0",
-      "react-dom/": "https://esm.sh/react-dom@^19.1.0/"
-    }
-  }
-  </script>
+    <!-- Local styles are handled by import in index.tsx and Tailwind -->
 </head>
   <body>
     <div id="root"></div>
